k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-server
  template:
    metadata:
      labels:
        component: postgres-server
    spec:
      
      # volumes:
      #   - name: postgres-storage-volume
      #     persistentVolumeClaim:
      #       claimName: database-persistent-volume-claim
      
      containers:
        - name: postgres-server-container
          image: postgres
          
          ports:
            - containerPort: 5432 
          
          # volumeMounts:
          #   - name: postgres-storage-volume
          #     mountPath: /var/lib/postgresql/data
