k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis-server
  template:
    metadata:
      labels:
        component: redis-server
    spec:
      containers:
       - name: redis-server-container
         image: redis
         ports:
           - containerPort: 6379
