k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: server-deployment

spec:
  replicas: 1
  selector:
   matchLabels:
     component: api-server
  template:
    metadata:
      labels:
        component: api-server
    spec:
     containers:
      - name: api-server-container
        image: p2pdops/multi-container-server:latest
        imagePullPolicy: Always
        ports:
         - containerPort: 5000
