k8s/exposer.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-expose
spec:
  selector:
    app: external-expose
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
